添加学术管理模块

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,13 @@
 
 spring.mvc.favicon.enabled=false  
 
+spring.servlet.multipart.maxFileSize=100Mb
+spring.servlet.multipart.maxRequestSize=100Mb
+
+
 #spring.mail.host=smtp.163.com //邮箱服务器地址
 #spring.mail.username=lhqs1314@163.com //用户名
-#spring.mail.password=dna19140489    //密码
+#spring.mail.password=9876543210    //密码
 #spring.mail.default-encoding=UTF-8
 #
 #mail.fromMail.addr=lhqs1314@163.com  //以谁来发送邮件
