--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>cn.lhqs</groupId>
 	<artifactId>lab</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.2-snapshot</version>
 	<packaging>jar</packaging>
 
 	<name>lab</name>
@@ -64,6 +64,12 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>1.1.23</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>7.2.0</version>
 		</dependency>
 
 		<dependency>
