--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,6 @@
 server:
   port: 9099
 
-#spring:
-#  datasource:
-#    url: jdbc:mysql://gu.lhqs1314.cn:3306/temp
-#    username: root
-#    password: lhqs
-#    driver-class-name: com.mysql.jdbc.Driver
-
 #mybatis:
 #  configuration:
 #   map-underscore-to-camel-case: true #开启驼峰映射
@@ -18,8 +11,8 @@ server:
 spring:
   datasource:
     username: root
-    password: lhqs
-    url: jdbc:mysql://47.98.185.45:3306/super_lab?useUnicode=true&characterEncoding=UTF-8
+    password: QQPRLUe3S0AM
+    url: jdbc:mysql://47.93.175.42:3306/super_lab?useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
@@ -39,7 +32,6 @@ spring:
     useGlobalDataSourceStat: true
     connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
 
-##pagehelper
 #pagehelper:
 #    helperDialect: mysql
 #    reasonable: true
