--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 *.iml
 *.ipr
 
+src/main/resources/application.yml
+src/main/resources/config.properties
+
 ### NetBeans ###
 /nbproject/private/
 /build/
