--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ server:
 spring:
   datasource:
     username: root
-    password: PRLUe30AMJI5MEVkZFB3
+    password: gPRLUe30AMJI5MEVkZFB3
     url: jdbc:mysql://47.98.125.48:3306/super_lab?useUnicode=true&characterEncoding=UTF-8
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
