--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -2,5 +2,5 @@
 qiniu.fileUrl=http://qiniu.lhqs1314.cn/
 qiniu.accesskey=zkgxHEGe5LviU7Xd4u6Yxbg6SLCXS_RKvmvb8sxsz
 qiniu.secretkey=tZU4QQPRLUe30AMJI5MEVkZFB3uH3HYUqriHbrs6t
-qiniu.bucket=lhqs.gu
+qiniu.bucket=lhqs.guf
 qiniu.cdn=qiniu.lhqs1314.cn
