迟来的提交

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>cn.lhqs</groupId>
 	<artifactId>lab</artifactId>
-	<version>1.0.2-snapshot</version>
+	<version>1.2.4-snapshot</version>
 	<packaging>jar</packaging>
 
 	<name>lab</name>
@@ -70,6 +70,17 @@
 			<groupId>com.qiniu</groupId>
 			<artifactId>qiniu-java-sdk</artifactId>
 			<version>7.2.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
 		</dependency>
 
 		<dependency>
