--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #qiniu config
 qiniu.fileUrl=http://qiniu.lhqs1314.cn/
-qiniu.accesskey=zkgxHEGe5LviU7Xd4u6Yxbg6SLCXS_RKvmvb8sxsz
-qiniu.secretkey=tZU4QQPRLUe30AMJI5MEVkZFB3uH3HYUqriHbrs6t
-qiniu.bucket=lhqs.gufu
+qiniu.accesskey=kgxHEGe5LviU7Xd4u6Yxbg6SLCXS_RKvmvb8sxsz
+qiniu.secretkey=ZU4QQPRLUe30AMJI5MEVkZFB3uH3HYUqriHbrs6t
+qiniu.bucket=lhqs
 qiniu.cdn=qiniu.lhqs1314.cn
